--- a/src/style/pages/_home.sass
+++ b/src/style/pages/_home.sass
@@ -26,7 +26,7 @@
             top: 50%
             right: 0
             transform: translateY(-100%)
-            z-index: 9
+            z-index: 10
 
             .btn
                 @include width-height(50%,100%)
@@ -38,6 +38,7 @@
 
                 img
                     @include width-height(2rem, auto)
+                    cursor: pointer
 
         // TEXT CONTAINER
         .top-right-container
